--- a/charts/cronjobs/templates/configmap.yaml
+++ b/charts/cronjobs/templates/configmap.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: "{{ include "cronjobs.releaseName" $ }}-{{ $job.name }}"
+  namespace: {{ $job.namespace }}
 data:
   config: {{ $job.config }}
 {{- end }}
