--- a/charts/cronjobs/templates/configmap.yaml
+++ b/charts/cronjobs/templates/configmap.yaml
@@ -6,6 +6,5 @@ metadata:
   name: "{{ include "cronjobs.releaseName" $ }}-{{ $job.name }}"
   namespace: {{ $job.namespace }}
 data:
-  config: |-
-    {{ $job.config }}
+  {{- .job.config| toYaml | nindent 2 }}
 {{- end }}
