--- a/charts/freedns/Chart.yaml
+++ b/charts/freedns/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for Kubernetes
-name: freedns-webhook
-version: 0.1.0
+name: freedns
+version: 0.1.1
