--- a/charts/open-plaato-keg/templates/deployment.yaml
+++ b/charts/open-plaato-keg/templates/deployment.yaml
@@ -41,8 +41,11 @@ spec:
               {{- toYaml . | nindent 12 }}
               {{- end }}
           ports:
+            - name: keg
+              containerPort: {{ .Values.service.keg.port }}
+              protocol: TCP
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: {{ .Values.service.http.port }}
               protocol: TCP
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
