--- a/charts/open-plaato-keg/values.yaml
+++ b/charts/open-plaato-keg/values.yaml
@@ -27,9 +27,12 @@ podSecurityContext: {}
 securityContext: {}
 
 service:
-  type: ClusterIP
-  keg_listener_port: 1234
-  http_listener_port: 8085
+  http:
+    port: 8085
+    type: ClusterIP
+  keg:
+    port: 1234
+    type: ClusterIP
 
 ingress:
   enabled: false
@@ -46,11 +49,11 @@ resources: {}
 
 livenessProbe:
   httpGet:
-    path: /
+    path: /index.html
     port: http
 readinessProbe:
   httpGet:
-    path: /
+    path: /index.html
     port: http
 
 autoscaling:
@@ -67,21 +70,30 @@ nodeSelector: {}
 
 tolerations: []
 
-affinity: {}
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/arch
+              operator: In
+              values:
+                - amd64
+
 
 env:
   - name: DATABASE_FILE_PATH
     value: "/db/keg_data.bin"
   - name: KEG_LISTENER_PORT
-    value: 1234
+    value: "1234"
   - name: HTTP_LISTENER_PORT
-    value: 8085
+    value: "8085"
   - name: MQTT_ENABLED
-    value: true
+    value: "true"
   - name: MQTT_HOST
-    value: 192.168.0.123
+    value: "192.168.0.123"
   - name: MQTT_PORT
-    value: 1883
+    value: "1883"
   - name: MQTT_USERNAME
     value: ""
   - name: MQTT_PASSWORD
@@ -89,7 +101,7 @@ env:
   - name: MQTT_CLIENT
     value: "open_plaato_keg"
   - name: BARHELPER_ENABLED
-    value: false
+    value: "false"
   - name: BARHELPER_API_KEY
     value: ""
   - name: BARHELPER_KEG_MONITOR_MAPPING
