fix: properly setup secrits file

--- a/charts/open-plaato-keg/templates/secrets.yaml
+++ b/charts/open-plaato-keg/templates/secrets.yaml
@@ -1,6 +1,6 @@
 {{- $barhelper_api_key := default (randAlphaNum 64) .Values.barhelperPassword.value | b64enc | quote }}
 {{- $mqtt_password := default (randAlphaNum 64) .Values.mqttPassword.value | b64enc | quote }}
-{{- $secretName := default "plaato" .Values.existingSecrets }}
+{{- $secretName := default .Chart.Name .Values.existingSecrets -}}
 
 {{- if .Values.existingSecrets }}
 {{- $existingSecret := (lookup "v1" "Secret" .Release.Namespace $secretName ) }}
@@ -13,7 +13,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "plaato"
+  name: {{ $secretName }}
   annotations:
     "helm.sh/resource-policy": "keep"
 type: Opaque
