--- a/charts/open-plaato-keg/templates/deployment.yaml
+++ b/charts/open-plaato-keg/templates/deployment.yaml
@@ -53,14 +53,23 @@ spec:
             {{- toYaml .Values.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- with .Values.volumeMounts }}
           volumeMounts:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-      {{- with .Values.volumes }}
+           - mountPath: /db
+             name: config
+           {{- if .Values.persistence.additionalMounts }}
+             {{- .Values.persistence.additionalMounts | toYaml | nindent 12 }}
+           {{- end }}
       volumes:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        - name: config
+          {{- if .Values.persistence.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ .Values.persistence.existingClaim | default (include "open-plaato-keg.fullname" .) }}
+          {{- else }}
+          emptyDir: { }
+          {{- end }}
+          {{- if .Values.persistence.additionalVolumes }}
+          {{- .Values.persistence.additionalVolumes | toYaml | nindent 8}}
+          {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
