fix: use api alive healthcheck

--- a/charts/open-plaato-keg/values.yaml
+++ b/charts/open-plaato-keg/values.yaml
@@ -51,11 +51,11 @@ resources: {}
 
 livenessProbe:
   httpGet:
-    path: /index.html
+    path: /api/alive
     port: http
 readinessProbe:
   httpGet:
-    path: /index.html
+    path: /api/alive
     port: http
 
 autoscaling:
