--- a/charts/calibre-web-automated/Chart.yaml
+++ b/charts/calibre-web-automated/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-name: open-plaato-keg
-description: A Helm chart for open-plaato-keg
+name: calibre-web-automated
+description: A Helm chart for calibre-web-automated
 type: application
 version: 0.1.0
-appVersion: "0.0.11"
+appVersion: "V2.1.2"
 maintainers:
   - email: djtecha@gmail.com
     name: djtecha
