--- a/charts/calibre-web-automated/templates/deployment.yaml
+++ b/charts/calibre-web-automated/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-           - mountPath: /db
+           - mountPath: /config
              name: config
            {{- if .Values.persistence.additionalMounts }}
              {{- .Values.persistence.additionalMounts | toYaml | nindent 12 }}
