--- a/charts/calibre-web-automated/values.yaml
+++ b/charts/calibre-web-automated/values.yaml
@@ -44,13 +44,13 @@ readinessProbe:
     path: /login
     port: http
 
-volumes: []
-#  - name: config
-#    persistentVolumeClaim:
-#      claimName: config
-volumeMounts: []
-#  - mountPath: "/config"
-#    name: config
+volumes:
+  - name: config
+    persistentVolumeClaim:
+      claimName: config
+volumeMounts:
+  - mountPath: "/config"
+    name: config
 
 nodeSelector: {}
 
