--- a/charts/calibre-web-automated/values.yaml
+++ b/charts/calibre-web-automated/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: crocodilestick/calibre-web-automated
   pullPolicy: IfNotPresent
-  tag: ""
+  tag: "dev"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -72,3 +72,7 @@ env:
     value: "UTC"
   - name: DOCKER_MODS
     value: "lscr.io/linuxserver/mods:universal-calibre-v7.16.0"
+  - name: PUID
+    value: "1000"
+  - name: PGID
+    value: "100"
