--- a/charts/calibre-web-automated/values.yaml
+++ b/charts/calibre-web-automated/values.yaml
@@ -24,9 +24,7 @@ podLabels: {}
 
 podSecurityContext: {}
 
-securityContext:
-  runAsUser: 0
-  runAsGroup: 0
+securityContext: {}
 
 service:
   http:
