--- a/charts/open-plaato-keg/values.yaml
+++ b/charts/open-plaato-keg/values.yaml
@@ -123,7 +123,7 @@ env:
     value: "false"
   - name: BARHELPER_KEG_MONITOR_MAPPING
     value: "plaato-auth-key:barhelper-custom-keg-monitor-id"
-  - BARHELPER_ENDPOINT:
+  - name: BARHELPER_ENDPOINT
     value: "https://europe-west1-barhelper-app.cloudfunctions.net/api/customKegMon"
   - name: MQTT_USERNAME
     value: ""
