--- a/charts/cronjobs/templates/cronjob.yaml
+++ b/charts/cronjobs/templates/cronjob.yaml
@@ -16,6 +16,8 @@ spec:
           labels:
             app: {{ include "cronjobs.releaseName" $ }}
             cron: {{ $job.name }}
+            service: {{ $job.name }}
+            {{- include "job.labels" $ | nindent 4 }}
         spec:
         {{- if hasKey $job "imagePullSecrets" }}
           imagePullSecrets:
