--- a/charts/cronjobs/templates/cronjob.yaml
+++ b/charts/cronjobs/templates/cronjob.yaml
@@ -17,7 +17,9 @@ spec:
             app: {{ include "cronjobs.releaseName" $ }}
             cron: {{ $job.name }}
             service: {{ $job.name }}
-            {{- include "job.labels" $ | nindent 4 }}
+            { { toYaml . | indent 8 } }
+            { { - end } }
+            { { - with $job.labels } }
         spec:
         {{- if hasKey $job "imagePullSecrets" }}
           imagePullSecrets:
