fix: allow proper label passing

--- a/charts/cronjobs/templates/cronjob.yaml
+++ b/charts/cronjobs/templates/cronjob.yaml
@@ -10,11 +10,9 @@ spec:
   concurrencyPolicy: {{ $job.concurrencyPolicy }}
   failedJobsHistoryLimit: {{ $job.failedJobsHistoryLimit }}
   jobTemplate:
-    {{ - with $job.labels }}
     metadata:
       labels:
-      {{ toYaml . | indent 4 }}
-    {{ - end }}
+        test: "testy"
     spec:
       template:
         spec:
