--- a/charts/cronjobs/templates/cronjob.yaml
+++ b/charts/cronjobs/templates/cronjob.yaml
@@ -13,8 +13,10 @@ spec:
     spec:
       template:
         metadata:
+          {{- with $job.labels }}
           labels:
-            test: "testy"
+          {{ toYaml . | indent 8 }}
+          {{- end }}
         spec:
         {{- if hasKey $job "imagePullSecrets" }}
           imagePullSecrets:
