fix: allow proper label passing

--- a/charts/cronjobs/templates/cronjob.yaml
+++ b/charts/cronjobs/templates/cronjob.yaml
@@ -13,10 +13,7 @@ spec:
     spec:
       template:
         metadata:
-          {{- with $job.labels }}
-          labels:
-          {{ toYaml . | indent 8 }}
-          {{- end }}
+          labels: {{ $job.labels | toYaml | indent 8 }}
         spec:
         {{- if hasKey $job "imagePullSecrets" }}
           imagePullSecrets:
