fix: allow proper label passing

--- a/charts/cronjobs/templates/cronjob.yaml
+++ b/charts/cronjobs/templates/cronjob.yaml
@@ -13,7 +13,10 @@ spec:
     spec:
       template:
         metadata:
-          labels: {{ $job.labels | toYaml | indent 8 }}
+          labels:
+            {{- with $job.labels }}
+            {{ toYaml . | indent 8 }}
+            {{- end }}
         spec:
         {{- if hasKey $job "imagePullSecrets" }}
           imagePullSecrets:
